--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ add_subdirectory(JUCE)
 
 set (CMAKE_CXX_STANDARD 23)
 
-project(${NAME} VERSION ${VERSION})
+project(${NAME} VERSION ${VERSION} LANGUAGES C CXX)
 
 set(PROJECT_SOURCE_DIRECTORY "${CMAKE_SOURCE_DIR}")
 set(CORE_SOURCE_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
