--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -28,19 +28,19 @@ jobs:
 
       - name: Configure CMake
         run: >
-          cmake -B ${{ github.workspace }}/build
+          cmake -B build
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
           -S ${{ github.workspace }}
 
       - name: Build
-        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }}
+        run: cmake --build build --config ${{ matrix.build_type }}
 
       - name: Package VST3
         run: |
           mkdir -p package
-          cp -R ${{ github.workspace }}/build/ExtremeSidechain_artefacts/Release/* package/
+          cp -R build/ExtremeSidechain_artefacts/Release/* package/
         shell: bash
 
       - name: Upload artifact
